# QuantumGfx

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
Docs/: Architecture.md
Include/Qgfx/: Qgfx.hpp
Include/Qgfx/Common/: Align.hpp  ArrayProxy.hpp  DebugOutput.hpp  Error.hpp  FixedBlockMemoryAllocator.hpp  FlagsEnum.hpp  FormatString.hpp  HashUtils.hpp  IRefCountedObject.hpp  MemoryAllocator.hpp  PoolAllocator.hpp  RefAutoPtr.hpp  RefCountedObject.hpp  RefPtr.hpp  STDAllocator.hpp  SpinLock.hpp  TypeCompatibleBytes.hpp  ValidatedCast.hpp
Include/Qgfx/Graphics/: APIInfo.hpp  Forward.hpp  GraphicsTypes.hpp  IBase.hpp  IBuffer.hpp  ICommandBuffer.hpp  ICommandQueue.hpp  IComputePipeline.hpp  IDeviceObject.hpp  IEngineFactory.hpp  IFence.hpp  IGraphicsPipeline.hpp  IInstance.hpp  IObject.hpp  IPipeline.hpp  IRenderContext.hpp  IRenderDevice.hpp  IRenderer.hpp  IResource.hpp  ISampler.hpp  IShaderModule.hpp  ISwapChain.hpp  ITexture.hpp  ITextureView.hpp  StateObjectsRegistry.hpp
Include/Qgfx/Graphics/Vulkan/: BaseVk.hpp  BufferVk.hpp  CommandBufferVk.hpp  CommandQueueVk.hpp  EngineFactoryVk.hpp  FenceVk.hpp  HardwareQueueVk.hpp  InstanceVk.hpp  MemAllocVk.hpp  RenderContextVk.hpp  RenderDeviceVk.hpp  ShaderModuleVk.hpp  SwapChainVk.hpp  TextureViewVk.hpp  TextureVk.hpp  TypeConversionsVk.hpp  VulkanBase.hpp  VulkanRenderer.hpp  VulkanResource.hpp
Include/Qgfx/Platform/: Atomics.hpp  NativeWindow.hpp  Numerics.hpp
Include/Qgfx/Platform/Basic/: BasicAtomics.hpp  BasicNumerics.hpp
Include/Qgfx/Platform/Win32/: Win32Atomics.hpp  Win32NativeWindow.hpp
Source/Common/: DebugOutput.cpp  FixedBlockMemoryAllocator.cpp  MemoryAllocator.cpp  SpinLock.cpp
Source/Graphics/: IBase.cpp  ICommandBuffer.cpp  ICommandQueue.cpp  IRenderDevice.cpp  IRenderer.cpp  IShaderModule.cpp  ISwapChain.cpp  ITexture.cpp
Source/Graphics/Vulkan/: CommandBufferVk.cpp  CommandQueueVk.cpp  EngineFactoryVk.cpp  FenceVk.cpp  HardwareQueueVk.cpp  InstanceVk.cpp  MemAllocVk.cpp  RenderContextVk.cpp  RenderDeviceVk.cpp  SwapChainVk.cpp  TextureVk.cpp  TypeConversionsVk.cpp  VulkanBase.cpp  VulkanRenderer.cpp
Source/Platform/Win32/: Win32Atomics.cpp
